@@ -1,5 +1,10 @@
 2002-11-12  AIDA Shinra <aida-s@jcom.home.ne.jp>
 
+	* [w3m-dev 03408] edit From in w3mail.cgi 
+	* scripts/w3mmail.cgi.in: edit from as well
+
+2002-11-12  AIDA Shinra <aida-s@jcom.home.ne.jp>
+
 	* [w3m-dev 03408] fix Bug#87472
 	    MOUSE_SCROLL_LINE should be a run-time option
 	* fm.h (relative_wheel_scroll): added
@@ -4536,4 +4541,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.497 2002/11/11 15:33:28 ukai Exp $
+$Id: ChangeLog,v 1.498 2002/11/11 15:50:28 ukai Exp $
